--- a/bootstrap/shell/layout.css
+++ b/bootstrap/shell/layout.css
@@ -707,9 +707,35 @@ fieldset[disabled] .btn-reject.active {
 .form-static {
   display:block;
   padding-top:7px;
+  line-height:1.42857143;
 }
 
 .form-label {text-align:right}
+
+.no-appearance,
+a.no-appearance,
+button.no-appearance,
+input.no-appearance,
+select.no-appearance,
+textarea.no-appearance {
+  -webkit-appearance:none;
+  -moz-appearance:none;
+  appearance:none;
+  margin:0;
+  padding:0;
+  border:none;
+  background:none;
+  outline:none;
+  font:inherit;
+  color:inherit;
+  text-align:inherit;
+  -webkit-border-radius:0;
+  -moz-border-radius:0;
+  border-radius:0;
+  -webkit-box-shadow:none;
+  -moz-box-shadow:none;
+  box-shadow:none;
+}
 
 .text-muted {color:#777}
 .text-accept,
