--- a/bootstrap/shell/layout.css
+++ b/bootstrap/shell/layout.css
@@ -407,7 +407,10 @@ fieldset[disabled] .btn-primary:focus,
 .btn-action[disabled]:active,
 .btn-primary[disabled]:active,
 fieldset[disabled] .btn-action:active,
-fieldset[disabled] .btn-primary:active,.btn-action.disabled.active,.btn-primary.disabled.active,.btn-action[disabled].active,
+fieldset[disabled] .btn-primary:active,
+.btn-action.disabled.active,
+.btn-primary.disabled.active,
+.btn-action[disabled].active,
 .btn-primary[disabled].active,
 fieldset[disabled] .btn-action.active,
 fieldset[disabled] .btn-primary.active {
