--- a/bootstrap/shell/layout.css
+++ b/bootstrap/shell/layout.css
@@ -4,6 +4,7 @@ h1,h2,h3,h4,h5,h6,
 .h1,.h2,.h3,.h4,.h5,.h6 {
   font-weight:bold;
   letter-spacing:-1px;
+  word-wrap:break-word;
 }
 
 fieldset {margin:0 0 10px}
@@ -238,13 +239,7 @@ input[type="file"],
 label,
 select {cursor:pointer}
 
-.form-control-static.input-lg,
-.form-control-static.input-sm {
-  padding-right:0;
-  padding-left:0;
-}
-
-.input-sm {
+.input-small {
   height:30px;
   padding:5px 10px;
   font-size:12px;
@@ -252,15 +247,15 @@ select {cursor:pointer}
   border-radius:3px;
 }
 
-select.input-sm {
+.select-small {
   height:30px;
   line-height:30px;
 }
 
-textarea.input-sm,
-select[multiple].input-sm {height:auto}
+.textarea-small,
+.select-small[multiple] {height:auto}
 
-.input-lg {
+.input-large {
   height:46px;
   padding:10px 16px;
   font-size:18px;
@@ -268,13 +263,13 @@ select[multiple].input-sm {height:auto}
   border-radius:6px;
 }
 
-select.input-lg {
+.select-large {
   height:46px;
   line-height:46px;
 }
 
-textarea.input-lg,
-select[multiple].input-lg {height:auto}
+.textarea-large,
+.select-large[multiple] {height:auto}
 
 .btn {
   display:inline-block;
@@ -678,21 +673,21 @@ fieldset[disabled] .btn-reject.active {
   border-color:#d43f3a;
 }
 
-.btn-lg {
+.btn-large {
   padding:10px 16px;
   font-size:18px;
   line-height:1.33;
   border-radius:6px;
 }
 
-.btn-sm {
+.btn-small {
   padding:5px 10px;
   font-size:12px;
   line-height:1.5;
   border-radius:3px;
 }
 
-.btn-xs {
+.btn-x-small {
   padding:1px 5px;
   font-size:12px;
   line-height:1.5;
